tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.stderr
error[E0428]: the name `MsgCaseTest` is defined multiple times
  --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:32:5
   |
30 |     MsgCaseTest(MsgCaseTest),
   |     ------------------------ previous definition of the type `MsgCaseTest` here
31 |     /// msg_case_test
32 |     MsgCaseTest(MsgCaseTest),
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ `MsgCaseTest` redefined here
   |
   = note: `MsgCaseTest` must be defined only once in the type namespace of this enum

error[E0428]: the name `MsgCaseTest` is defined multiple times
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:671:1
    |
602 | pub struct MsgCaseTest {
    | ---------------------- previous definition of the type `MsgCaseTest` here
...
671 | pub struct MsgCaseTest {
    | ^^^^^^^^^^^^^^^^^^^^^^ `MsgCaseTest` redefined here
    |
    = note: `MsgCaseTest` must be defined only once in the type namespace of this module

error[E0119]: conflicting implementations of trait `Clone` for type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:670:10
    |
601 | #[derive(Clone, Copy)]
    |          ----- first implementation here
...
670 | #[derive(Clone, Copy)]
    |          ^^^^^ conflicting implementation for `MsgCaseTest`

error[E0119]: conflicting implementations of trait `std::marker::Copy` for type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:670:17
    |
601 | #[derive(Clone, Copy)]
    |                 ---- first implementation here
...
670 | #[derive(Clone, Copy)]
    |                 ^^^^ conflicting implementation for `MsgCaseTest`

error[E0119]: conflicting implementations of trait `TryFrom<&[u8]>` for type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:697:1
    |
628 | impl core::convert::TryFrom<&[u8]> for MsgCaseTest {
    | -------------------------------------------------- first implementation here
...
697 | impl core::convert::TryFrom<&[u8]> for MsgCaseTest {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `MsgCaseTest`

error[E0119]: conflicting implementations of trait `Frame` for type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:709:1
    |
640 | impl embedded_can::Frame for MsgCaseTest {
    | ---------------------------------------- first implementation here
...
709 | impl embedded_can::Frame for MsgCaseTest {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `MsgCaseTest`

error[E0592]: duplicate definitions with name `MESSAGE_ID`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:615:5
    |
615 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `MESSAGE_ID`
...
684 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     -------------------------------------- other definition for `MESSAGE_ID`

error[E0592]: duplicate definitions with name `new`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:619:5
    |
619 |     pub fn new() -> Result<Self, CanError> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `new`
...
688 |     pub fn new() -> Result<Self, CanError> {
    |     -------------------------------------- other definition for `new`

error[E0592]: duplicate definitions with name `raw`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:624:5
    |
624 |     pub fn raw(&self) -> &[u8; 8] {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `raw`
...
693 |     pub fn raw(&self) -> &[u8; 8] {
    |     ----------------------------- other definition for `raw`

error[E0034]: multiple applicable items in scope
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:61:26
    |
 61 |             MsgCaseTest::MESSAGE_ID => {
    |                          ^^^^^^^^^^ multiple `MESSAGE_ID` found
    |
note: candidate #1 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:615:5
    |
615 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:684:5
    |
684 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0034]: multiple applicable items in scope
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:64:26
    |
 64 |             MsgCaseTest::MESSAGE_ID => {
    |                          ^^^^^^^^^^ multiple `MESSAGE_ID` found
    |
note: candidate #1 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:615:5
    |
615 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:684:5
    |
684 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0034]: multiple applicable items in scope
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:642:31
    |
642 |         if id.into() != Self::MESSAGE_ID { None } else { data.try_into().ok() }
    |                               ^^^^^^^^^^ multiple `MESSAGE_ID` found
    |
note: candidate #1 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:615:5
    |
615 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:684:5
    |
684 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0034]: multiple applicable items in scope
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:657:15
    |
657 |         Self::MESSAGE_ID
    |               ^^^^^^^^^^ multiple `MESSAGE_ID` found
    |
note: candidate #1 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:615:5
    |
615 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:684:5
    |
684 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0034]: multiple applicable items in scope
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:711:31
    |
711 |         if id.into() != Self::MESSAGE_ID { None } else { data.try_into().ok() }
    |                               ^^^^^^^^^^ multiple `MESSAGE_ID` found
    |
note: candidate #1 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:615:5
    |
615 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:684:5
    |
684 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0034]: multiple applicable items in scope
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:726:15
    |
726 |         Self::MESSAGE_ID
    |               ^^^^^^^^^^ multiple `MESSAGE_ID` found
    |
note: candidate #1 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:615:5
    |
615 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `MsgCaseTest`
   --> tests-snapshots/dbc-cantools/long_names_multiple_relations.snap.rs:684:5
    |
684 |     pub const MESSAGE_ID: embedded_can::Id = Id::Standard(unsafe {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
